composer load json

--- a/htdocs/templates/catalogue/view.phtml
+++ b/htdocs/templates/catalogue/view.phtml
@@ -1,15 +1,25 @@
 <?php
 $productList = $this->getData('products');
+$singleProduct = $this->getData('singleProduct');
+$singleProductBis = $this->getData('singleProductBis');
 ?>
 
 <?php include(BASE_DIR . '/templates/head.phtml') ?>
 
-Ma view Catalog Page
-<ul>
+    Ma view Catalog Page
+    <ul>
 
-<?php foreach ($productList as $product) : ?>
-    <li><?= $product->getName() ?> à <?= $product->getPrice() ?>€</li>
-<?php endforeach; ?>
-</ul>
+        <?php foreach ($productList as $product) : ?>
+            <li><?= $product->getName() ?> à <?= $product->getPrice() ?>€</li>
+        <?php endforeach; ?>
+    </ul>
+
+<?php if ($singleProduct != null) : ?>
+    <b><?= $singleProduct->getName() ?> à <?= $singleProduct->getPrice() ?>€</b> <br>
+<?php endif; ?>
+
+<?php if ($singleProductBis != null) : ?>
+    <b><?= $singleProductBis->getName() ?> à <?= $singleProductBis->getPrice() ?>€</b>
+<?php endif; ?>
 
 <?php include(BASE_DIR . '/templates/footer.phtml') ?>
