--- a/htdocs/templates/create_product.html.twig
+++ b/htdocs/templates/create_product.html.twig
@@ -1,14 +1,5 @@
 {% extends "base.html.twig" %}
-
-{% block title %}Welcome Home !{% endblock %}
-
+{% block title %}Catalog{% endblock %}
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_label(form.Name) }}
-    {{ form_widget(form.Name) }}
-    {{ form_label(form.Price) }}
-    {{ form_widget(form.Price) }}
-    {{ form_rest(form) }}
-    <button type="submit">Enregistrer</button>
-    {{ form_end(form) }}
+    {{ form(form) }}
 {% endblock %}
