Plus que l'étape 5

--- a/htdocs/templates/match/index.html.twig
+++ b/htdocs/templates/match/index.html.twig
@@ -19,7 +19,7 @@
 
 
         <div class="example-wrapper">
-            Hello {% for matchs in match %}
+            Hello {% for key,matchs in match %}
                 <p>-------------------------------------</p>
                 <li><p>Date du match : {{ matchs.date }}</p>
                     <p>Equipe domicile : {{ matchs.teams.domicile }}</p>
@@ -36,11 +36,12 @@
                         {% endif %}
 
                         {% elseif 'now'|date('Y-m-d H-m-s', "Europe/Paris") < matchs.date|date('Y-m-d H-m-s', "Europe/Paris") %}
-                            <form method="POST" action="PariController">
+                            <form method="POST" action="pari">
+                                <input type="hidden" name="matchId" value="{{ key }}">
                                 <label for="inputEmail">Score domicile</label>
-                                <input type="number" name="Score domicile" id="inputScore1" class="form-control">
+                                <input type="number" name="ScoreDomicile" id="inputScore1" class="form-control">
                                 <label for="inputPassword">Score extérieur</label>
-                                <input type="number" name="Score extérieur" id="inputScore2" class="form-control">
+                                <input type="number" name="ScoreExterieur" id="inputScore2" class="form-control">
                                 <button class="btn btn-lg btn-primary" type="submit">
                                     Parier
                                 </button>
