--- a/htdocs/templates/home.html.twig
+++ b/htdocs/templates/home.html.twig
@@ -4,6 +4,29 @@
 
 {% block body %}
 
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4f805d;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Compte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pari sportif</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     <p>Bonjour, </p><p>et bienvenue sur notre site de pronostic.</p>
 
     <p>Sur ce site vous allez pouvoir faire des pronostics pour gagner des points</p>
