--- a/htdocs/templates/base.html.twig
+++ b/htdocs/templates/base.html.twig
@@ -14,7 +14,8 @@
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
-    <body>
+    <body style="background-color: whitesmoke;">
+
         {% block body %}{% endblock %}
     </body>
 </html>
