--- a/htdocs/templates/match/index.html.twig
+++ b/htdocs/templates/match/index.html.twig
@@ -4,7 +4,58 @@
 
 {% block body %}
 <head>
+    <ul class="nav justify-content-center" style="background-color: black;">
+        <li class="nav-item" style="color: white">
+            <p>Famille, vie social,santé financière. Etes-VOUS PRÊT A TOUT MISER ?</p>
+            <p>POUR ÊTRE AIDE, APPELEZ LE 09-74-75-13-13 (appel non surtaxé)</p>
+        </li>
+    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: red;">
+        <div class="container-fluid">
+            <a class="navbar-brand " href="http://localhost/l3-php/htdocs/public/index.php/" style="color: white">BetFlic</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                {% if app.user %}
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://localhost/l3-php/htdocs/public/index.php/match" style="color: white">Pari sportif</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://localhost/l3-php/htdocs/public/index.php/profil" style="color: white">Compte</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost/l3-php/htdocs/public/index.php/contact" style="color: white">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost/l3-php/htdocs/public/index.php/classement" style="color: white">Classement des joueurs</a>
+                        </li>
+                    </ul>
+
+                {% else %}
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://localhost/l3-php/htdocs/public/index.php/match" style="color: white">Pari sportif</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost/l3-php/htdocs/public/index.php/contact" style="color: white">Contact</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost/l3-php/htdocs/public/index.php/classement" style="color: white">Classement des joueurs</a>
+                        </li>
+                    </ul>
+                {% endif %}
+
+            </div>
+        </div>
+    </nav>
+    <br>
+    <br>
 </head>
     <style>
         .example-wrapper{
@@ -13,15 +64,18 @@
     </style>
 
     {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        <div class="mb-3" style="text-align: center">
+            Vous êtes connecté avec {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
 
-
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4" style="text-align: center; background-color: antiquewhite">
         <div class="example-wrapper">
-            Hello {% for key,matchs in match %}
+            {% for key,matchs in match %}
                 <p>-------------------------------------</p>
-                <li><p>Date du match : {{ matchs.date }}</p>
+                <p>Date du match : {{ matchs.date }}</p>
                     <p>Equipe domicile : {{ matchs.teams.domicile }}</p>
                     <p>Equipe extérieur : {{ matchs.teams.exterieur }}</p>
                     {% if matchs.scores.domicile is defined %}
@@ -47,17 +101,23 @@
                                 </button>
                             </form>
                     {% endif %}
-                </li>
-            {% endfor %}
-
-            ✅
+                            {% endfor %}
+        </div>
+        </div>
+        <div class="col-4"></div>
+    </div>
+</div>
         </div>
 
     {% else %}
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4" style="text-align: center; background-color: antiquewhite">
         <div class="example-wrapper">
-            Hello {% for matchs in match %}
+            {% for matchs in match %}
                 <p>-------------------------------------</p>
-                <li><p>Date du match : {{ matchs.date }}</p>
+                <p>Date du match : {{ matchs.date }}</p>
                     <p>Equipe domicile : {{ matchs.teams.domicile }}</p>
                     <p>Equipe extérieur : {{ matchs.teams.exterieur }}</p>
                     {% if matchs.scores.domicile is defined %}
@@ -72,15 +132,17 @@
                         {% endif %}
                     {% else %}
                         <p>Pour parier connectez vous !</p>
-                        <button class="btn btn-lg btn-primary" type="submit">
-                            Connexion
-                        </button>
+                        <a href="http://localhost/l3-php/htdocs/public/index.php/login" class="btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">Connexion</a>
+                        <br>
+                        <br>
                     {% endif %}
-                </li>
-            {% endfor %}
 
-            ✅
+            {% endfor %}
         </div>
+        </div>
+        <div class="col-4"></div>
+    </div>
+</div>
     {% endif %}
 
 
